# tr-gy-8013-Fa-24

./: .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt
Homeworks/: Homework-1.ipynb  Homework-1_solutions.ipynb  Homework-2.ipynb  Homework-2_solutions.ipynb
Homeworks/Data/Homework_1/: generate_data.ipynb  linear_data.pkl  linear_data_x.csv  linear_data_y.csv  secret_data.pkl  secret_data_x.csv  secret_data_y.csv
Lectures/: Lecture_2.ipynb
Lectures/Lecture 1/: Lecture 1 Data.ipynb
Lectures/Lecture_2/: Lecture_2.ipynb
Lectures/Lecture_6/: figures.ipynb
Lectures/Lecture_7/: 12_1_Self_Attention_practice.ipynb  12_1_Self_Attention_solution.ipynb  lecture_motion_prediction_example.ipynb
Lectures/Lecture_8/: figures_for_lecture.ipynb
Miscellaneous/: Lecture-3-mini-backprop.ipynb  Lecture-3-momentum-example.ipynb
src/tr_gy_8013_fa_24/: __init__.py
src/tr_gy_8013_fa_24/Lecture 1/: Lecture 1 Data.ipynb
src/tr_gy_8013_fa_24/Miscellaneous/: figures.ipynb
tr_gy_8013_fa_24/: setup.py
tr_gy_8013_fa_24/Homeworks/: Homework-1.ipynb
